--- a/Health4life/Views/UserArea/ConnectHub.cshtml
+++ b/Health4life/Views/UserArea/ConnectHub.cshtml
@@ -70,7 +70,7 @@
                         var rowClass = (key.IsActive) ? "success" : null;
                         <tr class="@rowClass">
                             
-                            <td>@key.Id</td>
+                            <td>@key.Key</td>
                             <td>@key.ValidUntil.ToString("dd-MMM-yyyy HH:mm")</td>
                             <td>@key.ValidFor</td>
                             <td>
