--- a/Health4life/Views/Account/Register.cshtml
+++ b/Health4life/Views/Account/Register.cshtml
@@ -8,9 +8,12 @@
     <h2>Create a new account.</h2>
 </hgroup>
 
-<div class="alert alert-success">
-    @ViewBag.Message
-</div>
+@if (!String.IsNullOrWhiteSpace(ViewBag.Message))
+{
+    <div class="alert alert-success">
+        @ViewBag.Message
+    </div>
+}
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
