--- a/Health4life/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Health4life/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,8 +1,7 @@
 ﻿@model Health4life.Models.LocalPasswordModel
 
-<h3>Change password</h3>
-
-@using (Html.BeginForm("Manage", "Account",null,FormMethod.Post,new{@class="form-horizontal"})) {
+@using (Html.BeginForm("Manage", "Account", null, FormMethod.Post, new { @class = "form-horizontal  well well-sm" }))
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
