--- a/Health4life/Views/UserArea/Activities.cshtml
+++ b/Health4life/Views/UserArea/Activities.cshtml
@@ -20,7 +20,25 @@
             <div class="list-group-item">
                 <h4 class="list-group-item-heading">Activities summary</h4>
             </div>
-            <a href="#" class="list-group-item">
+            @foreach(var activity in Model.Activities)
+            {
+                <a href="#" class="list-group-item">
+                    @if(activity.IsNew)
+                    {
+                        <p><span class="label label-default">New!</span></p>
+                    }
+                    @if(activity.IsFromGp)
+                    {
+                        <p><span class="label label-info">GP Advice</span></p>
+                    }
+                    <h4 class="list-group-item-heading">
+                        @activity.Description
+                    </h4>
+                    <p>@activity.Description on @activity.Date.ToString("dd-MMM-yyyy")</p>
+                </a>
+            }
+
+            @*<a href="#" class="list-group-item">
                 <p><span class="label label-info">GP Advice</span></p>
                 <h4 class="list-group-item-heading">
                     Walk 5 km
@@ -31,7 +49,7 @@
             <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Hide and seek</h4>
                 <p>Hide from teachers on 30-10-2013</p>
-            </a>
+            </a>*@
         </div>
     </div>
 </div>
