--- a/Health4life/Views/UserArea/Diary.cshtml
+++ b/Health4life/Views/UserArea/Diary.cshtml
@@ -3,9 +3,116 @@
 }
 
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-8">
         <h2>@ViewBag.Title</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
+        <div id="calendar"></div>
+    </div>
+    <div id="eventlist-container" class="col-lg-4">
+        <h2>All events</h2>
+        <div id="eventlist" class="nav"></div>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-8">
+        <div class="col-md-9 col-md-offset-3">
+            <div class="btn-group">
+                <button class="btn btn-primary" data-calendar-nav="prev">&lt;&lt; Prev month</button>
+                <button class="btn" data-calendar-nav="today">Today</button>
+                <button class="btn btn-primary" data-calendar-nav="next">Next month &gt;&gt;</button>
+            </div>
+        </div>
+    </div>
+   
+
+</div>
+
+<div class="modal fade" id="events-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title">Event</h4>
+			</div>
+			<div class="modal-body" style="height: 300px">
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+@section scripts
+{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var options = {
+                events_source: 'AgendaEvents',
+                view: 'month',
+                tmpl_path: '/tmpls/',
+                tmpl_cache: false,
+                onAfterEventsLoad: function (events) {
+                    if (!events) {
+                        return;
+                    }
+                    var list = $('#eventlist');
+                    list.html('');
+
+                    $.each(events, function (key, val) {
+                        var type = (val.id.substr(0, 1) == 'a') ? 'Activity' : 'Patient History Info';
+                        $(document.createElement('li'))
+                            .html('<a class="eventlist" href="' + val.title + '" data-event-id="' + val.id + '" href="#">' + type + ' : ' + val.title + '</a>')
+                            .appendTo(list);
+                    });
+                },
+                onAfterViewLoad: function (view) {
+                    $('#eventlist-container h2').text(this.getTitle());
+                    $('.btn-group button').removeClass('active');
+                    $('button[data-calendar-view="' + view + '"]').addClass('active');
+                },
+                classes: {
+                    months: {
+                        general: 'label'
+                    }
+                }
+            };
+
+            var calendar = $('#calendar').calendar(options);
+            calendar.setOptions({ modal: '#events-modal' });
+            $('.btn-group button[data-calendar-nav]').each(function () {
+                var $this = $(this);
+                $this.click(function () {
+                    calendar.navigate($this.data('calendar-nav'));
+                });
+            });
+            
+            $('a.eventlist').mouseenter(function () {
+                $('a[data-event-id="' + $(this).data('event-id') + '"]').closest('.cal-cell1').addClass('day-highlight dh-' + $(this).data('event-class'));
+            });
+            
+            $('a.eventlist').mouseleave(function () {
+                $('div.cal-cell1').removeClass('day-highlight dh-' + $(this).data('event-class'));
+            });
+
+            $('a.eventlist').on('click', function () {
+                event.preventDefault();
+                event.stopPropagation();
+                
+                var modal = $('#events-modal');
+
+                var data = $(this).attr('href');
+                $('.modal-body', modal).html(data);
+                if (!modal.data('handled.bootstrap-calendar')) {
+                    modal
+                        .on('show.bs.modal', function () {
+                            var modal_body = $(this).find('.modal-body');
+                            var height = modal_body.height() - parseInt(modal_body.css('padding-top'), 10) - parseInt(modal_body.css('padding-bottom'), 10);
+                            $(this).find('iframe').height(Math.max(height, 50));
+                        })
+                        .data('handled.bootstrap-calendar', true);
+                }
+                modal.modal('show');
+            });
+        });
+    </script>
+}
