--- a/Health4life/Views/UserArea/PatientHistory.cshtml
+++ b/Health4life/Views/UserArea/PatientHistory.cshtml
@@ -1,19 +1,121 @@
-﻿@{
+﻿@model Health4life.ViewModel.HistoryEntryVm
+@{
     ViewBag.Title = "Patient history";
 }
 
+@section scripts
+{
+    <script type="text/javascript">
+        $(function () {
+            var options = { format: 'dd/mm/yyyy' };
+            $('#datepicker1').datepicker(options);
+            $('#date').datepicker(options);
+        })
+    </script>
+}
+
+@if(ViewBag.Success != null)
+{
+    if (ViewBag.Success)
+    {
+        <div class="alert alert-success">
+            @ViewBag.Message
+        </div>
+    }else
+    {
+        <div class="alert alert-danger">
+        @ViewBag.Message
+    </div>  
+    }
+}
+
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-6">
         <h2>@ViewBag.Title</h2>
         <div class="list-group">
             <div class="list-group-item">
                 <h4 class="list-group-item-heading">Patient history summary</h4>
             </div>
-            <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Broken leg</h4>
-                <p>Fractured femur on 26-10-2013</p>
-            </a>
+            @foreach (var entry in Model.HistoryEntries)
+            {
+                <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">@entry.Description</h4>
+                    <p>@entry.DomainDescription on @entry.Date.ToString("dd-MM-yyyy")</p>
+                </a>
+            }
         </div>
-
     </div>
+    <div class="col-lg-6">
+        <div class="list-group">
+            <h2>Import external data</h2>
+            <form role="form" class="well well-sm">
+                <div class="form-group">
+                    <label for="description1">Own description</label>
+                    <input type="text" class="form-control" id="description1" placeholder="Description of the data">
+                </div>
+                <div class="form-group">
+                    <label for="datepicker1">Date</label>
+                    <input type="text"  value="21/11/2013" id="datepicker1">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputFile">File input</label>
+                    <input type="file" id="exampleInputFile">
+                    <p class="help-block">Check our FAQ for accepted formats.</p>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
+        <div class="list-group">
+            <h2>Enter data</h2>
+            @using (Html.BeginForm("AddPatientHistory", "UserArea", null, FormMethod.Post, new { @class = "well well-sm" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary()
+
+                <div class="form-group">
+                    <label for="description">Own description</label>
+                    <input type="text" class="form-control" name="description" id="description" placeholder="Description of the data">
+                </div>
+                <div class="form-group">
+                    <label for="inputdata">Data input</label>
+                    <textarea id="inputdata" name="inputdata" class="form-control" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="date">Date</label>
+                    <input type="text"  value="21/11/2013" id="date" name="date">
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" id="askgp" name="askgp"> Ask for GP verification
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            } 
+                       
+           @* <form role="form" class="well well-sm">
+                <div class="form-group">
+                    <label for="description2">Own description</label>
+                    <input type="text" class="form-control" id="description2" placeholder="Description of the data">
+                </div>
+                <div class="form-group">
+                    <label for="inputData">Data input</label>
+                    <textarea id="inputData" class="form-control" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="datepicker2">Date</label>
+                    <input type="text"  value="21/11/2013" id="datepicker2">
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> Ask for GP verification
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>*@
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-6"></div>
+    <div class="col-lg-6"></div>
 </div>
