--- a/Health4life/Views/UserArea/Index.cshtml
+++ b/Health4life/Views/UserArea/Index.cshtml
@@ -133,64 +133,24 @@
 
 @section scripts
 {
-     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
-        var draw = false;
         //init carousel
         $(document).ready(function () {
-            var roundaboutElem = $('#roundabout');
-            roundaboutElem.roundabout({ autoplay: true, autoplayDuration: 5000, responsive: true }, function () { draw = true; });
-            roundaboutElem.children('li').on("click", function () {
-                debugger;
-                
-                var isAutoPlaying = roundaboutElem.roundabout("isAutoplaying");
-                if(isAutoPlaying)
-                    roundaboutElem.roundabout("stopAutoplay");
-            });
-            
-        });
-        
-    /*// Load the Visualization API and the piechart package.
-        google.load('visualization', '1.0', { 'packages': ['corechart'] });
+            if ($(window).width() > 768) {
+                var roundaboutElem = $('#roundabout');
+                roundaboutElem.roundabout({ autoplay: true, autoplayDuration: 5000, responsive: true }, function () { draw = true; });
+                roundaboutElem.children('li').on("click", function () {
+                    debugger;
 
-        // Set a callback to run when the Google Visualization API is loaded.
-        google.setOnLoadCallback(drawChart);
-
-        // Callback that creates and populates a data table,
-        // instantiates the pie chart, passes in the data and
-        // draws it.
-        function drawChart() {
-            if (!draw) {
-                setTimeout(drawChart, 300);
-                return;
+                    var isAutoPlaying = roundaboutElem.roundabout("isAutoplaying");
+                    if (isAutoPlaying)
+                        roundaboutElem.roundabout("stopAutoplay");
+                });
+            }else
+            {
+                $('#roundabout li').addClass('well well-sm');
             }
-
-            // Create the data table.
-            var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Topping');
-            data.addColumn('number', 'Slices');
-            data.addRows([
-                ['Mushrooms', 3],
-                ['Onions', 1],
-                ['Olives', 1],
-                ['Zucchini', 1],
-                ['Pepperoni', 2]
-            ]);
-
-            var width = $('#chart_div').parent().width();
-            var height = $('#chart_div').parent().width() - 160;
-            // Set chart options
-            var options = {
-                'title': 'How Much Pizza I Ate Last Night',
-                'width': width,
-                'height': height
-            };
-
-            // Instantiate and draw our chart, passing in some options.
-            var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-            chart.draw(data, options);
-        }*/
-        
+        });
     </script>
     
     <script type="text/javascript">
